# restext

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  index.html  landing.html  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8562736ee8b5_initial_schema.py  a1b2c3d4e5f6_add_published_at_to_chunks.py
src/restext/: config.py  dependencies.py  main.py
src/restext/api/: analytics.py  discover.py  feedback.py  keys.py  projects.py  query.py  router.py  sources.py
src/restext/models/: __init__.py  account.py  api_key.py  base.py  chunk.py  feedback.py  project.py  query_log.py  source.py
src/restext/schemas/: feedback.py  key.py  project.py  query.py  source.py
src/restext/services/: chunker.py  contextualizer.py  crawler.py  discovery.py  embedder.py  feedback_processor.py  ingestion.py  parser.py  query_engine.py  summarizer.py  vectorstore.py
src/restext/utils/: hashing.py  tokens.py
src/restext/workers/: tasks.py  worker.py
